tests/ui/recursion/recursion.stderr
error: reached the recursion limit while instantiating `test::<Cons<Cons<Cons<Cons<Cons<...>>>>>>`
  --> $DIR/recursion.rs:27:14
   |
LL |           _ => test(
   |  ______________^
LL | |
LL | |             n - 1,
LL | |             i + 1,
LL | |             Cons { head: 2 * i + 1, tail: first },
LL | |             Cons { head: i * i, tail: second },
LL | |         ),
   | |_________^
   |
note: `test` defined here
  --> $DIR/recursion.rs:24:1
   |
LL | fn test<T: Dot>(n: isize, i: isize, first: T, second: T) -> isize {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the full type name has been written to '$TEST_BUILD_DIR/recursion/recursion/recursion.long-type.txt'

error: aborting due to previous error

